kubernetes/k3s-prod-a/workloads/pihole/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:2025.03.0@sha256:6c872c3f8f1954423dbd1c7db661719b447e7b890e231489ada2a6a2904342ff
          # startupProbe:
          #   httpGet:
          #     path: /admin/api.php?status
          #     port: 80
          #   failureThreshold: 5
          #   periodSeconds: 20
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 80
            - containerPort: 53
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: etc-pihole/
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: etc-dnsmasq.d/
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
